--- a/frontend/src/assets/i18n/es-ES.json
+++ b/frontend/src/assets/i18n/es-ES.json
@@ -58,6 +58,33 @@
     "USER": "Usuario:",
     "COPYRIGHT": "© 2026 SGD - Todos los derechos reservados"
   },
+  "REGISTER": {
+    "TITLE": "Crear Cuenta",
+    "SUBTITLE": "Complete los datos a continuación para crear su cuenta",
+    "FIELD_USERNAME": "Usuario",
+    "FIELD_EMAIL": "Correo Electrónico",
+    "FIELD_PASSWORD": "Contraseña",
+    "FIELD_CONFIRM_PASSWORD": "Confirmar Contraseña",
+    "USERNAME_PLACEHOLDER": "Ingrese su nombre de usuario",
+    "EMAIL_PLACEHOLDER": "Ingrese su correo electrónico",
+    "PASSWORD_PLACEHOLDER": "Ingrese su contraseña",
+    "CONFIRM_PASSWORD_PLACEHOLDER": "Confirme su contraseña",
+    "USERNAME_REQUIRED": "El usuario es obligatorio",
+    "USERNAME_MIN_LENGTH": "El usuario debe tener al menos 3 caracteres",
+    "USERNAME_MAX_LENGTH": "El usuario debe tener como máximo 50 caracteres",
+    "USERNAME_PATTERN": "El usuario solo puede contener letras, números, guiones y guiones bajos",
+    "EMAIL_REQUIRED": "El correo electrónico es obligatorio",
+    "EMAIL_INVALID": "Correo electrónico inválido",
+    "PASSWORD_REQUIRED": "La contraseña es obligatoria",
+    "PASSWORD_MIN_LENGTH": "La contraseña debe tener al menos 6 caracteres",
+    "CONFIRM_PASSWORD_REQUIRED": "La confirmación de contraseña es obligatoria",
+    "PASSWORD_MISMATCH": "Las contraseñas no coinciden",
+    "REGISTER_BUTTON": "Crear Cuenta",
+    "REGISTERING": "Creando cuenta...",
+    "CANCEL": "Cancelar",
+    "ALREADY_HAVE_ACCOUNT": "¿Ya tiene una cuenta?",
+    "LOGIN_LINK": "Iniciar sesión"
+  },
   "COMMON": {
     "LOGOUT": "Salir",
     "ERROR": "Error",
