--- a/frontend/src/assets/i18n/pt-BR.json
+++ b/frontend/src/assets/i18n/pt-BR.json
@@ -58,6 +58,33 @@
     "USER": "User:",
     "COPYRIGHT": "© 2026 GED - Todos os direitos reservados"
   },
+  "REGISTER": {
+    "TITLE": "Criar Conta",
+    "SUBTITLE": "Preencha os dados abaixo para criar sua conta",
+    "FIELD_USERNAME": "Usuário",
+    "FIELD_EMAIL": "E-mail",
+    "FIELD_PASSWORD": "Senha",
+    "FIELD_CONFIRM_PASSWORD": "Confirmar Senha",
+    "USERNAME_PLACEHOLDER": "Digite seu nome de usuário",
+    "EMAIL_PLACEHOLDER": "Digite seu e-mail",
+    "PASSWORD_PLACEHOLDER": "Digite sua senha",
+    "CONFIRM_PASSWORD_PLACEHOLDER": "Confirme sua senha",
+    "USERNAME_REQUIRED": "Usuário é obrigatório",
+    "USERNAME_MIN_LENGTH": "Usuário deve ter no mínimo 3 caracteres",
+    "USERNAME_MAX_LENGTH": "Usuário deve ter no máximo 50 caracteres",
+    "USERNAME_PATTERN": "Usuário pode conter apenas letras, números, hífens e underscores",
+    "EMAIL_REQUIRED": "E-mail é obrigatório",
+    "EMAIL_INVALID": "E-mail inválido",
+    "PASSWORD_REQUIRED": "Senha é obrigatória",
+    "PASSWORD_MIN_LENGTH": "Senha deve ter no mínimo 6 caracteres",
+    "CONFIRM_PASSWORD_REQUIRED": "Confirmação de senha é obrigatória",
+    "PASSWORD_MISMATCH": "As senhas não coincidem",
+    "REGISTER_BUTTON": "Criar Conta",
+    "REGISTERING": "Criando conta...",
+    "CANCEL": "Cancelar",
+    "ALREADY_HAVE_ACCOUNT": "Já possui uma conta?",
+    "LOGIN_LINK": "Faça login"
+  },
   "COMMON": {
     "LOGOUT": "Sair",
     "ERROR": "Erro",
